@@ -1,12 +1,13 @@
 package com.todolist.bff_todolist.domain.service.impl;
 
-import com.todolist.bff_todolist.api.vo.todolist.CreateTaskRequest;
+import com.todolist.bff_todolist.domain.model.CreateTaskRequest;
 import com.todolist.bff_todolist.domain.model.Task;
 import com.todolist.bff_todolist.domain.model.Todolist;
 import com.todolist.bff_todolist.domain.model.user.User;
 import com.todolist.bff_todolist.domain.service.TodolistService;
 import com.todolist.bff_todolist.spi.repository.TodolistRepository;
 import lombok.RequiredArgsConstructor;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 
@@ -45,35 +46,29 @@ public class TodolistServiceDefaultImpl implements TodolistService {
     public Task createTaskInTodolist(UUID id, CreateTaskRequest request) {
         Todolist todolist = todolistRepository.getTodolistById(id).orElseThrow(() -> new IllegalStateException("Todolist not found"));
         checkTaskRequest(todolist, request);
+        Task task = new Task(UUID.randomUUID(), request.title(), request.description(), false, request.dueDate(), todolist);
 
-        Task task = new Task();
-        task.setId(UUID.randomUUID());
-        task.setTitle(request.title());
-        task.setDescription(request.description());
-        task.setDueDate(request.dueDate());
-        task.setTodolist(todolist);
-        
         return todolistRepository.createTask(task);
     }
 
     private void checkTaskRequest(Todolist todolist, CreateTaskRequest request) {
-        if ( !loggerUserOwnThis(todolist)) {
-            throw new IllegalArgumentException("User is not the owner of the todolist");
-        }
-
-        if (request.title() == null || request.title().isBlank()) {
+        if (StringUtils.isBlank(request.title())) {
             throw new IllegalArgumentException("Title is required");
         }
-        if (request.description() == null || request.description().isBlank()) {
+        if (StringUtils.isBlank(request.description()))  {
             throw new IllegalArgumentException("Description is required");
         }
         if (request.dueDate() != null && request.dueDate().isBefore(LocalDateTime.now())) {
             throw new IllegalArgumentException("Due date must be in the future");
         }
+
+        if (!loggerUserOwnThis(todolist)) {
+            throw new IllegalArgumentException("User does not own this todolist");
+        }
     }
 
     private static boolean loggerUserOwnThis(Todolist todolist) {
         User userAuthenticated = (User) SecurityContextHolder.getContext().getAuthentication().getPrincipal();
-        return todolist.getUserId().equals(userAuthenticated.getId());
+        return todolist.userId().equals(userAuthenticated.getId());
     }
 }
